--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,36 @@
     <title>Bikcraft - Bicicletas Elétricas</title>
     <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
-
+    <header class="header-bg">
+        <div class="header">
+            <a href="./"><img src="/assets/img/bikcraft.svg" alt="Bikcraft"></a>
+            <nav aria-label="primaria" </nav>
+                <ul class="header-menu cor-0">
+                    <li><a href="./bicicletas.html">Bicicletas</a></li>
+                    <li><a href="./seguros.html">Seguros</a></li>
+                    <li><a href="./contato.html">Contato</a></li>
+                </ul>
+        </div>
+    </header>
+    <main class="intro-bg">
+        <div class="intro">
+            <div class="intro-conteudo">
+                <h1 class="texto-grande cor-0">Bicicletas feitas sob medida<span class="pri-1">.</span></h1>
+                <p class="texto-medio cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
+                <a class="button" href="./biciletas.html">Escolha a sua</a>
+            </div>
+            <div class="intro-imagem">
+                <img src="/assets/img/fotos/introducao.jpg" alt="Bicicleta elétrica preta.">
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
